feat: add character flows
